# claude-gui

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PRIVACY.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/blog/: 2026-05-06-blackcrab-0.1.3.md
scripts/: configure-macos-signing-secrets.sh  tauri-build.mjs  tauri-dev.mjs
src/: App.css  App.tsx  ComputerUseEntryView.tsx  LivePanel.tsx  Terminal.tsx  main.tsx  markdown.ts  toast.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
