[package]
name = "blackcrab"
version = "0.1.0"
description = "A GUI for Claude Code"
authors = ["you"]
edition = "2021"

[lib]
name = "blackcrab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
url = "2"
tauri-plugin-notification = "2.3.3"
portable-pty = "0.9.0"
